# pup

./: .env.example  .gitignore  AI_SWARM_SCENARIO.md  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  FUNCTIONAL_MAP.md  README.md  TASKS.md  docker-compose.yml  instrumentation.ts  middleware.ts  next.config.mjs  package.json  pnpm-lock.yaml  qa-kb-test.mjs  tailwind.config.ts
tools/tg-service/: .env.example  .gitignore  ARENA_SPEC.md  CLAUDE.md  CODE_REVIEW.md  DEBT-PLAN.md  DEPLOY-CHECKLIST.md  ENGINE-CONSOLIDATION.md  FEATURE-AUDIT.md  PARSER.md  PLAN.md  SMOKE-TEST.md  TODO.md  USER-GUIDE.md  WORK-PLAN-DONE.md  WORK-PLAN.md  ecosystem.config.js  pyproject.toml  requirements.txt  schema.sql
tools/tg-service/app/: config.py  deps.py  main.py
tools/tg-service/app/ai/: anthropic_client.py  embeddings.py
tools/tg-service/app/core/: audit.py  continuity.py  daily_usage.py  database.py  errors.py  logging.py  notify.py  security.py
tools/tg-service/app/services/: dm_ownership.py  kb_search.py  tg_runner.py
tools/tg-service/app/tasks/: ai_agent_tasks.py  ai_promoter_tasks.py  ai_sales_tasks.py  arena_tasks.py  auto_replier_tasks.py  beat_schedule.py  celery_app.py  channel_tasks.py  chat_broadcast_tasks.py  commenting_tasks.py  dispatch.py  dm_campaign_tasks.py  invite_campaign_tasks.py  join_chats_tasks.py  (+9 more)
tools/tg-service/public/: index.html
tools/tg-service/scripts/: contract_smoke.py  dev-down.sh  dev-up.sh  export_account_session.py  listen_login_code.py  regression_screens.py  session_to_tdata.py
tools/tg-service/tests/: conftest.py
(+725 files in other folders)
